Ajout des modifications de mise en forme de la page cv

--- a/cv.html
+++ b/cv.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
+<body id="body-cv">
     <main id="main-cv">
         <div class="gauche">
             <div class="head-gauche">
                 <h1>SEKOU KEITA</h1>
                 <h2>Dévloppeur Full Stack</h2>
                 <div class="photo-profil">
-
+                    <img src="images/i-know-exactly-what-i-want-headshot-attractive-young-african-american-student-stylish-glasses-having-serious-calm-face-expression-feeling-confident-about-his-future-plans-career.jpg" alt="">
                 </div>
             </div>
             <div class="body-gauche">
@@ -25,17 +25,62 @@
                         <h1>ADRESSE</h1>
                     </div>
                 </div>
-                <div >
-                    <img src="" alt="">
-                    <p>sekouk1410@gmail.com</p>
+                <div class="adresse-element">
+                    <div class="adresse">
+                        <img src="images/icon-email.png" alt="">
+                        <p>sekouk1410@gmail.com</p>
+                    </div>
+                    <div class="adresse">
+                        <img src="images/tel-icon.png" alt="">
+                        <p>+223 90363757</p>
+                    </div>
+                    <div class="adresse">
+                        <img src="images/localisation-icon.png" alt="">
+                        <p>Bamako</p>
+                    </div>
                 </div>
-                <div>
-                    <img src="" alt="">
-                    <p>+223 90363757</p>
-                </div>
-                <div>
-                    <img src="" alt="">
-                    <p>Bamako</p>
+                <div class="foot-gauche">
+                    <div class="titre">
+                        <div class="icon-titre">
+                            <div class="icon">
+                                <img src="images/diplome-icon.png" alt="">
+                            </div>
+                            <h1>DIPLOMES</h1>
+                        </div>
+                    </div>
+                    <div class="parcour">
+                        <h2>TECHNOLAB ISTA/Bamako</h2>
+                        <p>Licence en génie logiciel <br>
+                            2022-2023
+                        </p>
+                    </div>
+                    <div class="parcour">
+                        <h2>TECHNOLAB ISTA/Bamako</h2>
+                        <p>Licence en génie logiciel <br>
+                            2021-2022
+                        </p>
+                    </div>
+                    <div class="parcour">
+                        <h2>TECHNOLAB ISTA/Bamako</h2>
+                        <p>Licence en génie logiciel <br>
+                            2019-2020
+                        </p>
+                    </div>
+                    <div class="titre">
+                        <div class="icon-titre">
+                            <div class="icon">
+                                <img src="images/icon-reference.png" alt="">
+                            </div>
+                            <h1>REFERENCES</h1>
+                        </div>
+                    </div>
+                    <div class="parcour">
+                        <h2>Mr Konate</h2>
+                        <p>ingéniere logiciel <br>
+                            Tel: +22378654326 <br>
+                            Email: mk@gmail.com <br>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -49,12 +94,96 @@
                 </div>
                 <p>Passionné par le développement web et mobile, je maîtrise les technologies front-end et back-end pour concevoir des applications performantes et ergonomiques. En recherche d'une première expérience professionnelle pour mettre mes compétences en pratique.</p>
             </div>
-            
-            <div>
-
+            <div class="titre">
+                <div class="icon-titre">
+                    <div class="icon">
+                        <img src="images/profil.png" alt="">
+                    </div>
+                    <h1>EXPERIENCE</h1>
+                </div>
+                <h2>Création d’un site vitrine</h2>
+                <p>Développement d’un site vitrine responsive et optimisé, permettant à une entreprise de présenter ses services et d’attirer de nouveaux clients.</p>
+                <h2>Création d’un site de e-commenrce</h2>
+                <p>Développement d’une plateforme e-commerce moderne et sécurisée permettant la gestion des produits, des commandes et des paiements en ligne.</p>
+                <h2>Création d’un site pour la gestion d’un entrepot</h2>
+                <p>Développement d’une application web permettant de gérer efficacement les stocks, les entrées et sorties de marchandises, ainsi que le suivi des commandes.</p>
             </div>
-            <div>
-
+            <div class="titre">
+                <div class="icon-titre">
+                    <div class="icon">
+                        <img src="images/icon-competence.png" alt="">
+                    </div>
+                    <h1>COMPETENCES</h1>
+                </div>
+                <div class="element-competence">
+                    <div class="competence-droite">
+                        <div class="competence">
+                            <p>Python</p>
+                            <div class="bare-competence">
+                                <div class="bare1"></div>
+                                <div class="bare2"></div>
+                            </div>
+                        </div>
+                        <div class="competence">
+                            <p>Figma</p>
+                            <div class="bare-competence">
+                                <div class="bare1"></div>
+                                <div class="bare2"></div>
+                            </div>
+                        </div>
+                        <div class="competence">
+                            <p>Frimer</p>
+                            <div class="bare-competence">
+                                <div class="bare1"></div>
+                                <div class="bare2"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="comptence-gauche">
+                        <div class="competence">
+                            <p>Laravel</p>
+                            <div class="bare-competence">
+                                <div class="bare1"></div>
+                                <div class="bare2"></div>
+                            </div>
+                        </div>
+                        <div class="competence">
+                            <p>C++</p>
+                            <div class="bare-competence">
+                                <div class="bare1"></div>
+                                <div class="bare2"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="langue-hobbie">
+                    <div class="titre">
+                        <div class="icon-titre">
+                            <div class="icon">
+                                <img src="images/icon-langue.png" alt="">
+                            </div>
+                            <h1>LANGUES</h1>
+                        </div>
+                        <ul>
+                            <li>Français</li>
+                            <li>Anglais</li>
+                            <li>Bambara</li>
+                        </ul>
+                    </div>
+                    <div class="titre">
+                        <div class="icon-titre">
+                            <div class="icon">
+                                <img src="images/icon-hobbie.png" alt="">
+                            </div>
+                            <h1>HOBBIES</h1>
+                        </div>
+                        <ul>
+                            <li>Sport</li>
+                            <li>Voyage</li>
+                            <li>Lecture</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
