--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="description">
             <h1>Bienvenue sur mon portfolio</h1>
             <p>Découvrez mon parcours et mes réalisations</p>
-            <button>Voir mon CV</button>
+            <button><a href="cv.html">Voir mon CV</a></button>
         </div>
         <img class="accueil-img2" src="images/code-6618_256.gif" alt="">
     </main>
