--- a/cv.html
+++ b/cv.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body id="body-cv">
-    <button class="bouton-retour"><a href="index.html">Retour</a></button>
+    <!-- <button class="bouton-retour"><a href="index.html">Retour</a></button> -->
     <main id="main-cv">
         <div class="gauche">
             <div class="head-gauche">
@@ -190,7 +190,7 @@
             </div>
         </div>  
     </main>
-    <div class="controls">
+    <!-- <div class="controls">
         <button onclick="telechargerPDF()">📄 Télécharger en PDF</button>
     </div>
     <div class="couleur">
@@ -199,6 +199,6 @@
             <input type="color" id="colorPicker" value="#2c3e50" onchange="changerCouleur(this.value)">
         </div>
         <button onclick="changerCouleur('#333333')">Par defaut</button>
-    </div>
+    </div> -->
 </body>
 </html>
