mise en forme des boutons

--- a/cv.html
+++ b/cv.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body id="body-cv">
-    <!-- <button class="bouton-retour"><a href="index.html">Retour</a></button> -->
+    <a href="index.html" class="bouton-retour">Retour</a>
     <main id="main-cv">
         <div class="gauche">
             <div class="head-gauche">
@@ -190,15 +190,15 @@
             </div>
         </div>  
     </main>
-    <!-- <div class="controls">
-        <button onclick="telechargerPDF()">📄 Télécharger en PDF</button>
-    </div>
     <div class="couleur">
         <div class="boite-couleur">
             <label for="colorPicker">Choisir une couleur</label>
             <input type="color" id="colorPicker" value="#2c3e50" onchange="changerCouleur(this.value)">
         </div>
         <button onclick="changerCouleur('#333333')">Par defaut</button>
-    </div> -->
+    </div>
+    <div class="controls">
+        <button onclick="telechargerPDF()">📄 Télécharger en PDF</button>
+    </div>
 </body>
 </html>
